# TLWallNew

./: .gitignore  LICENSE.txt  MANIFEST.in  README.md  exec_pytlwall.py  pyproject.toml  run_gui.py  setup.py
.ipynb_checkpoints/: README-checkpoint.md
doc/: API_REFERENCE.md  API_REFERENCE_BEAM.md  API_REFERENCE_CFGIO.md  API_REFERENCE_CHAMBER.md  API_REFERENCE_FREQUENCIES.md  API_REFERENCE_LAYER.md  API_REFERENCE_MULTIPLE.md  API_REFERENCE_TLWALL.md  CHAMBER_SHAPES_REFERENCE.md  EXAMPLES.md  EXAMPLES_BEAM.md  EXAMPLES_CHAMBER.md  EXAMPLES_FREQUENCIES.md  EXAMPLES_LAYER.md  EXAMPLES_LOGGING.md  EXAMPLES_MULTIPLE.md  EXAMPLES_README.md  EXAMPLES_TLWALL.md  EXAMPLES_WAKE.md  GUI.md  GUI_DATA_PANEL.md  GUI_MENU_BAR.md  GUI_PLOT_PANEL.md  GUI_SIDEBAR.md  GUI_VIEW_IO.md  INSTALLATION.md  PYTLWALL_THEORY.md  README.md  README_MULTIPLE_CHAMBER.md  WAKE.md  WAKE_THEORY.md  style.css
doc/html/: API_REFERENCE.html  API_REFERENCE_BEAM.html  API_REFERENCE_CFGIO.html  API_REFERENCE_CHAMBER.html  API_REFERENCE_FREQUENCIES.html  API_REFERENCE_LAYER.html  API_REFERENCE_MULTIPLE.html  API_REFERENCE_TLWALL.html  CHAMBER_SHAPES_REFERENCE.html  EXAMPLES.html  EXAMPLES_BEAM.html  EXAMPLES_CHAMBER.html  EXAMPLES_FREQUENCIES.html  EXAMPLES_LAYER.html  EXAMPLES_LOGGING.html  EXAMPLES_MULTIPLE.html  EXAMPLES_README.html  EXAMPLES_TLWALL.html  GUI.html  GUI_DATA_PANEL.html  GUI_MENU_BAR.html  GUI_PLOT_PANEL.html  GUI_SIDEBAR.html  GUI_VIEW_IO.html  INSTALLATION.html  PYTLWALL_THEORY.html  README.html  README_MULTIPLE_CHAMBER.html  WAKE.html  WAKE_THEORY.html  index.html
examples/: ex_CW.py  ex_CWMag.py  ex_PEC.py  ex_Vac.py  ex_lowbeta.py  ex_surface_impedance.py  ex_surface_impedance_input.py  ex_wake.py  ex_without_cfg.py  example_beam_usage.py  example_chamber_usage.py  example_frequencies_usage.py  example_layer_usage.py  example_logging_usage.py  example_multiple_chamber.py  example_tlwall_usage.py  example_wake_usage.py
examples/ex_CW/output/: output.xlsx
examples/ex_CWMag/output/: output.xlsx
examples/ex_PEC/: ex_PEC2.cfg
examples/ex_PEC/output/: output.xlsx
examples/ex_Vac/output/: output.xlsx
examples/ex_lowbeta/output/: output.xlsx
examples/ex_multiple/: Diamond.cfg  Round.cfg  apertype2.txt  b_L_betax_betay.txt
examples/ex_surface_impedance/output/: output.xlsx
examples/ex_surface_impedance_input/output/: output.xlsx
examples/ex_wake_pec/: ex_wake_pec.cfg
examples/ex_wake_vacuum/: ex_wake_vacuum.cfg
examples/ex_without_cfg/output/: output.xlsx
examples/output_multiple/total/: total_impedances.xlsx
pytlwall/: __init__.py  __main__.py  beam.py  build_docs.py  cfg_io.py  chamber.py  frequencies.py  io_util.py  layer.py  logging_util.py  multiple_chamber.py  plot_util.py  run_pytlwall.py  shell_interface.py  times.py  tlwall.py  tlwall_wake.py
pytlwall_gui/: __init__.py  central_panel.py  chamber_data.py  data_panel.py  impedance_constants.py  main.py  main_window.py  menu_bar.py  plot_panel.py  sidebar.py  style.py  view_io.py
tests/: example_multiple_chamber.py  fromWake2DTOcfg.py  run_all_tests.py  run_tests_base.py  run_tests_compareW2D.py  run_tests_deep.py  run_tests_wake.py  test_beam.py  test_cfg.py  test_cfg_wake.py  test_cfgio_realistic.py  test_cfgio_special_cases.py  test_chamber.md  test_chamber.py  test_freq.py  test_io_util.py  test_layer.py  test_multiple_chamber.py  test_plot.py  test_tlwall.py  test_tlwall_wake.py
tests/compareWake2D/NewCV/: NewCVWake2D.cfg
tests/compareWake2D/RoundChamber/: RoundChamberIWake2D.cfg
tests/compareWake2D/RoundChamberLowBeta/: RoundChamberLowBetaWake2D.cfg
tests/compareWake2D/Ti_Cer_Cu_Vac/: Ti_Cer_Cu_VacWake2D.cfg
tests/deep_test/NewCV/: NewCVWake2D.cfg
tests/deep_test/RoundChamberLowBeta/: RoundChamberLowBetaWake2D.cfg
tests/deep_test/wake_test1/: wake_test1.py
tests/doc/: RUN_TESTS_DEEP_README.md  TESTING.md  test_beam.md  test_cfg.md  test_cfgio_realistic.md  test_cfgio_special_cases.md  test_freq.md  test_io_util.md  test_layer.md  test_plot.md  test_tlwall.md  test_tlwall_wake.md
tests/doc/HTML/: RUN_TESTS_DEEP_README.html  TESTING.html  index.html  sidebar.js  style.css  test_beam.html  test_cfg.html  test_cfgio_realistic.html  test_cfgio_special_cases.html  test_chamber.html  (+5 more)
tests/input/: one_layer.cfg  rectangular_chamber.cfg  two_layers.cfg
(+1557 files in other folders)
